# gray-scott-sim

./: CMakeLists.txt  Dockerfile  README.md  gs.cpp  gs.h  gt_gs.cpp  main.cpp
.github/workflows/: cmake-single-platform.yml  cmake.yml  docker-image.yml
c/: cpp.yml
src/: gs.cpp  gs.h  gt_gs.cpp
tests/: gt_gs.cpp
